--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ html {
   overflow-y: scroll; }
 
 body {
-  background-color: #FFBC9C;
+  background-color: #FFC9A6;
   margin: 0px;
   padding: 0px;
   font-family: 'open Sans', Monaco;
